samples/_failures_safe/1761639981_8b4b31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1532b868.c: In function ‘compress_data’:
./samples/SAFE/__tmp_1532b868.c:145:9: error: expected declaration or statement at end of input
  145 |         case COMP_LZW:
      |         ^~~~
./samples/SAFE/__tmp_1532b868.c:145:9: error: expected declaration or statement at end of input
